spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -2344,7 +2344,6 @@ figcaption {
   grid-row-gap: 3rem;
   border-top: 1px solid var(--border-color--border-greyed-out-alternate);
   flex-flow: column;
-  padding-bottom: 2rem;
   padding-top: 2rem;
   display: flex;
 }
